--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gqlGl32122",
+  "name": "gqlTP",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "graphql-yoga": "^1.18.3",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "uuid": "^8.3.2"
   }
 }
